--- a/realData.qmd
+++ b/realData.qmd
@@ -352,7 +352,7 @@ ggplot(dWB0, aes(flow_cfs_log10_scaled_ecdf, flow_cfs_log10_scaled)) +
 ```
 
 
-### Subsample flow data
+## Subsample flow data
 
 ```{r}
 #| label: subsampleFlow
@@ -468,7 +468,7 @@ plotSubSample <- function(dIn0, numSample){
     get_smoothed_data_figs_no_anchors$fig_smooth_interpolate, 
     get_smoothed_data_figs_no_anchors$fig_smooth_binomial, 
     get_smoothed_data_figs_no_anchors$fig_smooth_gam, 
-    ncol = 1, nrow = 3
+    ncol = 2, nrow = 2
   )
   
   #############################################
@@ -496,7 +496,7 @@ plotSubSample <- function(dIn0, numSample){
     get_smoothed_data_figs_with_anchors$fig_smooth_interpolate, 
     get_smoothed_data_figs_with_anchors$fig_smooth_binomial, 
     get_smoothed_data_figs_with_anchors$fig_smooth_gam, 
-    ncol = 1, nrow = 3
+    ncol = 2, nrow = 2
   )
   
   return(
@@ -510,7 +510,7 @@ plotSubSample <- function(dIn0, numSample){
 }
 ```
 
-100 samples  
+### 100 samples  
 First set of graphs does not include min/max flow anchors, second set does.
 ```{r}
 #| label: plotSubSample_100
@@ -520,7 +520,7 @@ plotSubSample(dWB0, 100)
 
 ```
 
-10 subsamples
+### 10 subsamples
 ```{r}
 #| label: plotSubSample_10
 
@@ -529,7 +529,17 @@ plotSubSample(dWB0, 10)
 
 ```
 
-4 subsamples
+### 7 subsamples
+```{r}
+#| label: plotSubSample_7
+
+dummy <- 1
+plotSubSample(dWB0, 7)
+
+```
+
+
+### 4 subsamples
 ```{r}
 #| label: plotSubSample_4
 
@@ -538,12 +548,12 @@ plotSubSample(dWB0, 4)
 
 ```
 
-1 subsample
+### 3 subsample
 ```{r}  
-#| label: plotSubSample_1
+#| label: plotSubSample_3
 
 dummy <- 1
-plotSubSample(dWB0, 2)
+plotSubSample(dWB0, 3)
 
 ```
 
