--- a/realData.qmd
+++ b/realData.qmd
@@ -357,7 +357,7 @@ ggplot(dWB0, aes(flow_cfs_log10_scaled_ecdf, flow_cfs_log10_scaled)) +
 ```{r}
 #| label: subsampleFlow
 
-get_observed_data_figs <- function(dIn, dInSampleApprox, dInSample) {
+get_observed_data_figs <- function(dIn, dInSampleApprox, dInSample, base_size = 12) {
   
   fig_all <- ggplot(dIn, aes(score_scaled, score_scaled_ecdf)) + 
     geom_line(size = 2) +
@@ -365,7 +365,7 @@ get_observed_data_figs <- function(dIn, dInSampleApprox, dInSample) {
     geom_line(aes(flow_cfs_log10_scaled, flow_cfs_log10_scaled_ecdf), color = "blue", size = 2) +
     geom_point(aes(flow_cfs_log10_scaled, flow_cfs_log10_scaled_ecdf), color = "orange", size = 4, data = dInSample) +
     labs(x = "Black = scaled observed score, Blue = scaled observed flow, Orange = subsampled flow", y = "Emp cumul dist") +
-    theme_publication() 
+    theme_publication(base_size = base_size) 
   
 
  
@@ -378,7 +378,7 @@ get_observed_data_figs <- function(dIn, dInSampleApprox, dInSample) {
   )
 }
 
-get_smoothed_data_figs <- function(dIn, dInSampleApprox, dInSample) {
+get_smoothed_data_figs <- function(dIn, dInSampleApprox, dInSample, base_size_in = 12) {
  
   fig_smooth_binomial <- ggplot(dIn, aes(score_scaled, score_scaled_ecdf)) + 
     geom_line() +
@@ -390,7 +390,7 @@ get_smoothed_data_figs <- function(dIn, dInSampleApprox, dInSample) {
       ) +
     labs(x = "", y = "Emp cumul dist") +
     ggtitle("Binomial smooth of subsampled flow") +
-    theme_publication() +
+    theme_publication(base_size = base_size_in) +
     theme(plot.title = element_text(size = rel(0.8)))
   
     
@@ -404,7 +404,7 @@ get_smoothed_data_figs <- function(dIn, dInSampleApprox, dInSample) {
       ) +
     labs(x = "Black = scaled image score, Orange = subsampled flow", y = "Emp cumul dist") +
     ggtitle("GAM smooth of subsampled flow") +
-    theme_publication() +
+    theme_publication(base_size = base_size_in) +
     theme(plot.title = element_text(size = rel(0.8)))
   
   # make ggtitle smaller 
@@ -415,7 +415,7 @@ get_smoothed_data_figs <- function(dIn, dInSampleApprox, dInSample) {
     labs(x = "", y = "Emp cumul dist") +
     # smaller font size for ggtitle 
     ggtitle("Linear interpolation of subsampled flow") +
-    theme_publication() +
+    theme_publication(base_size = base_size_in) +
     theme(plot.title = element_text(size = rel(0.8)))
   
   return(
@@ -428,7 +428,7 @@ get_smoothed_data_figs <- function(dIn, dInSampleApprox, dInSample) {
 }
 
 
-plotSubSample <- function(dIn0, numSample){
+plotSubSample <- function(dIn0, numSample, base_size_in = 12){
 
    dIn <- dIn0 |> 
      dplyr::select(
@@ -454,8 +454,8 @@ plotSubSample <- function(dIn0, numSample){
     )
   
   # these data are the same with or without anchors
-  get_observed_data_figs <- get_observed_data_figs(dIn, dInSampleApprox_no_anchors, dInSample_no_anchors)
-  get_smoothed_data_figs_no_anchors <- get_smoothed_data_figs(dIn, dInSampleApprox_no_anchors, dInSample_no_anchors)
+  get_observed_data_figs <- get_observed_data_figs(dIn, dInSampleApprox_no_anchors, dInSample_no_anchors, base_size = base_size_in)
+  get_smoothed_data_figs_no_anchors <- get_smoothed_data_figs(dIn, dInSampleApprox_no_anchors, dInSample_no_anchors, base_size = base_size_in)
   
   figs_observed_data <- #ggarrange(
     get_observed_data_figs$fig_all 
@@ -515,8 +515,8 @@ First set of graphs does not include min/max flow anchors, second set does.
 ```{r}
 #| label: plotSubSample_100
 
-dummy <- 1
-plotSubSample(dWB0, 100)
+dummy <- 2
+plotSubSample(dWB0, 100, base_size_in = 10)
 
 ```
 
@@ -524,8 +524,8 @@ plotSubSample(dWB0, 100)
 ```{r}
 #| label: plotSubSample_10
 
-dummy <- 1
-plotSubSample(dWB0, 10)
+dummy <- 2
+plotSubSample(dWB0, 10, base_size_in = 8)
 
 ```
 
@@ -533,7 +533,7 @@ plotSubSample(dWB0, 10)
 ```{r}
 #| label: plotSubSample_7
 
-dummy <- 1
+dummy <- 2
 plotSubSample(dWB0, 7)
 
 ```
@@ -543,7 +543,7 @@ plotSubSample(dWB0, 7)
 ```{r}
 #| label: plotSubSample_4
 
-dummy <- 1
+dummy <- 2
 plotSubSample(dWB0, 4)
 
 ```
@@ -552,7 +552,7 @@ plotSubSample(dWB0, 4)
 ```{r}  
 #| label: plotSubSample_3
 
-dummy <- 1
+dummy <- 2
 plotSubSample(dWB0, 3)
 
 ```
