--- a/realData.qmd
+++ b/realData.qmd
@@ -179,6 +179,14 @@ ggplot(d2, aes(scale(flow_cfs_log10), scale(score))) +
 
 ```
 
+```{r}
+#| label: output_d2
+
+write.csv(d2, "./data/out/forObservable/d2.csv")
+
+```
+
+
 ## Plot ECDF  
 Fair amount of variation among stations
 ```{r}
@@ -359,6 +367,22 @@ ggplot(dWB0, aes(flow_cfs_log10_scaled_ecdf, flow_cfs_log10_scaled)) +
 ```{r}
 #| label: subsampleFlow
 
+
+getECDF_diff <- function(x, y){
+  Fx <- ecdf(x)
+  Fy <- ecdf(y)
+  xy <- sort(unique(c(x,y)))
+  heights <- abs(Fx(xy) - Fy(xy))[-length(xy)]
+  widths <- xy[-1] - xy[-length(xy)]
+  area <- as.numeric(heights %*% widths)
+  
+ #to_plot <- data.frame(xy = xy, fx = Fx(xy), fy = Fy(xy))
+  
+ #ggplot()
+  
+  return(area)
+}
+
 get_observed_data_figs <- function(dIn, dInSampleApprox, dInSample, base_size = 12) {
   
   fig_all <- ggplot(dIn, aes(score_scaled, score_scaled_ecdf)) + 
@@ -366,6 +390,7 @@ get_observed_data_figs <- function(dIn, dInSampleApprox, dInSample, base_size = 
     geom_line(aes(flow_cfs_log10_scaled, flow_cfs_log10_scaled_ecdf), color = "blue", size = 2) +
     geom_line(aes(flow_cfs_log10_scaled, flow_cfs_log10_scaled_ecdf), color = "blue", size = 2) +
     geom_point(aes(flow_cfs_log10_scaled, flow_cfs_log10_scaled_ecdf), color = "orange", size = 4, data = dInSample) +
+    geom_text(aes(x = -1.5, y = 0.9), label = paste0("Difference in area = ", round(getECDF_diff(dIn$score_scaled_ecdf, dInSampleApprox$y), 5)), size = 10, color = "orange") +
     labs(x = "Black = scaled observed score, Blue = scaled observed flow, Orange = subsampled flow", y = "Emp cumul dist") +
     theme_publication(base_size = base_size) 
   
@@ -400,7 +425,7 @@ get_smoothed_data_figs <- function(dIn, dInSampleApprox, dInSample, base_size_in
     geom_point(aes(flow_cfs_log10_scaled, flow_cfs_log10_scaled_ecdf), color = "orange", size = 4, data = dInSample) +
     geom_smooth(
       aes(flow_cfs_log10_scaled, flow_cfs_log10_scaled_ecdf),
-      se = FALSE, color = "orange", linetype = "dashed",
+      se = FALSE, color = "orange", #linetype = "dashed",
       data = dInSample
       ) +
     labs(x = "Black = scaled image score, Orange = subsampled flow", y = "Emp cumul dist") +
@@ -521,7 +546,7 @@ First set of graphs does not include min/max flow anchors, second set does.
 ```{r}
 #| label: plotSubSample_100
 
-dummy <- 2
+dummy <- 3
 plotSubSample(dWB0, 100, base_size_in = 10)
 
 ```
@@ -530,7 +555,7 @@ plotSubSample(dWB0, 100, base_size_in = 10)
 ```{r}
 #| label: plotSubSample_10
 
-dummy <- 2
+dummy <- 3
 plotSubSample(dWB0, 10, base_size_in = 8)
 
 ```
@@ -539,7 +564,7 @@ plotSubSample(dWB0, 10, base_size_in = 8)
 ```{r}
 #| label: plotSubSample_7
 
-dummy <- 2
+dummy <- 3
 plotSubSample(dWB0, 7)
 
 ```
@@ -549,7 +574,7 @@ plotSubSample(dWB0, 7)
 ```{r}
 #| label: plotSubSample_4
 
-dummy <- 2
+dummy <- 3
 plotSubSample(dWB0, 4)
 
 ```
@@ -558,7 +583,7 @@ plotSubSample(dWB0, 4)
 ```{r}  
 #| label: plotSubSample_3
 
-dummy <- 2
+dummy <- 3
 plotSubSample(dWB0, 3)
 
 ```
