--- a/realData.qmd
+++ b/realData.qmd
@@ -375,11 +375,7 @@ getECDF_diff <- function(x, y){
   heights <- abs(Fx(xy) - Fy(xy))[-length(xy)]
   widths <- xy[-1] - xy[-length(xy)]
   area <- as.numeric(heights %*% widths)
-  
- #to_plot <- data.frame(xy = xy, fx = Fx(xy), fy = Fy(xy))
-  
- #ggplot()
-  
+
   return(area)
 }
 
@@ -401,24 +397,10 @@ get_preds_interp <- function(dIn, num_pred_points = 100) {
       dIn$flow_cfs_log10_scaled, 
       dIn$flow_cfs_log10_scaled_ecdf, 
       xout = seq(min(dIn$flow_cfs_log10_scaled), max(dIn$flow_cfs_log10_scaled), length.out = num_pred_points)
-      #dInSample_no_anchors$flow_cfs_log10_scaled
-      )
     )
+  )
   return(df)
 }
-
-
-# get_preds_logistic <- function(dIn, num_pred_points = 100) {
-#   mod <- glm(flow_cfs_log10_scaled_ecdf ~ flow_cfs_log10_scaled, family="binomial", data = dIn)
-#   
-#   x <- seq(min(dIn$flow_cfs_log10_scaled), max(dIn$flow_cfs_log10_scaled), length.out = num_pred_points)
-#   df <- data.frame(
-#     x = x,
-#     y = predict(mod, data.frame(flow_cfs_log10_scaled = x),  type = "response")
-#   )
-#   return(df)
-# }
-
 
 get_observed_data_figs <- function(dIn, dInSample, base_size = 12) {
   
@@ -435,58 +417,6 @@ get_observed_data_figs <- function(dIn, dInSample, base_size = 12) {
     )
   )
 }
-
-get_smoothed_data_figs <- function(dIn, dInSampleApprox, dInSample, base_size_in = 12) {
- 
-  fig_smooth_gam <- ggplot(dIn, aes(score_scaled, score_scaled_ecdf)) + 
-    geom_line() +
-    geom_point(aes(flow_cfs_log10_scaled, flow_cfs_log10_scaled_ecdf), color = "orange", size = 4, data = dInSample) +
-    geom_smooth(
-      aes(flow_cfs_log10_scaled, flow_cfs_log10_scaled_ecdf),
-      se = FALSE, color = "orange", #linetype = "dashed",
-      data = dInSample
-      ) +
-    geom_text(
-      aes(x = -1.5, y = 0.9), 
-      label = paste0(
-        "Difference in area = ", 
-        round(getECDF_diff(dIn$score_scaled_ecdf, get_preds_gam(dInSample)$y), 5)
-      ),
-      size = 8, 
-      color = "orange"
-      ) +
-    labs(x = "Black = scaled image score, Orange = subsampled flow", y = "Emp cumul dist") +
-    ggtitle("GAM smooth of subsampled flow") +
-    theme_publication(base_size = base_size_in) +
-    theme(plot.title = element_text(size = rel(0.8)))
-  
-  # make ggtitle smaller 
-  fig_smooth_interpolate <- ggplot(dIn, aes(score_scaled, score_scaled_ecdf)) + 
-    geom_line() +
-    geom_line(aes(x, y), color = "orange", size = 2, data = dInSampleApprox) +
-    geom_point(aes(flow_cfs_log10_scaled, flow_cfs_log10_scaled_ecdf), color = "orange", size = 4, data = dInSample) +
-    geom_text(
-      aes(x = -1.5, y = 0.9), 
-      label = paste0("Difference in area = ", 
-      round(getECDF_diff(dIn$score_scaled_ecdf, dInSampleApprox$y), 5)), 
-      size = 8, 
-      color = "orange"
-      ) +
-    labs(x = "", y = "Emp cumul dist") +
-    # smaller font size for ggtitle 
-    ggtitle("Linear interpolation of subsampled flow") +
-    theme_publication(base_size = base_size_in) +
-    theme(plot.title = element_text(size = rel(0.8)))
-  
-  return(
-    list(
-      #fig_smooth_binomial=fig_smooth_binomial, 
-      fig_smooth_gam=fig_smooth_gam,
-      fig_smooth_interpolate=fig_smooth_interpolate
-    )
-  )
-}
-
 
 get_smoothed_data_figs <- function(dIn, dInSample, dInSample_interp, dInSample_gam, base_size_in = 12) {
    # make ggtitle smaller 
@@ -529,9 +459,8 @@ get_smoothed_data_figs <- function(dIn, dInSample, dInSample_interp, dInSample_g
   
   return(
     list(
-      #fig_smooth_binomial=fig_smooth_binomial, 
-      fig_smooth_gam=fig_smooth_gam,
-      fig_smooth_interpolate=fig_smooth_interpolate
+      fig_smooth_interpolate=fig_smooth_interpolate,
+      fig_smooth_gam=fig_smooth_gam
     )
   )
 }
@@ -582,33 +511,15 @@ plotSubSample <- function(dIn0, numSample, num_pred_points = 100, base_size_in =
     dIn |> filter(flow_cfs_log10_scaled == min(flow_cfs_log10_scaled)) |> filter(score_scaled == min(score_scaled))
   )
   
-  # dInSampleApprox_with_anchors <- data.frame(
-  #   approx(
-  #     dInSample_with_anchors$flow_cfs_log10_scaled, 
-  #     dInSample_with_anchors$flow_cfs_log10_scaled_ecdf, 
-  #     xout = seq(min(dInSample_with_anchors$flow_cfs_log10_scaled), max(dInSample_with_anchors$flow_cfs_log10_scaled), length.out = num_pred_points)
-  #     #dInSample_with_anchors$flow_cfs_log10_scaled
-  #     )
-  #   )
-  # 
-  # #get_observed_data_figs_with_anchors <- get_observed_data_figs(dIn, dInSampleApprox_with_anchors, dInSample_with_anchors)
-  # get_smoothed_data_figs_with_anchors <- get_smoothed_data_figs(dIn, dInSampleApprox_with_anchors, dInSample_with_anchors)
-  # 
-  # 
-  # 
-    # subsample dIn  
-
-
-
   # Observed data - these data are the same with or without anchors
   get_observed_data_figs_with_anchors <- get_observed_data_figs(dIn, dInSample_with_anchors, base_size = base_size_in)
   figs_observed_data_with_anchors <- get_observed_data_figs_with_anchors$fig_all 
 
-  # Interploated or smoothed data
+  # Interpolated or smoothed data
   dInSample_interp_with_anchors <- get_preds_interp(dInSample_with_anchors, num_pred_points)
   dInSample_gam_with_anchors <- get_preds_gam(dInSample_with_anchors, num_pred_points)
                                                 
-  get_smoothed_data_figs_with_anchors <- get_smoothed_data_figs(dIn, dInSample, dInSample_interp_with_anchors, dInSample_gam_with_anchors, base_size = base_size_in)
+  get_smoothed_data_figs_with_anchors <- get_smoothed_data_figs(dIn, dInSample_with_anchors, dInSample_interp_with_anchors, dInSample_gam_with_anchors, base_size = base_size_in)
   
   # 
   figs_smoothed_data_with_anchors <- ggarrange(
@@ -639,7 +550,7 @@ First set of graphs does not include min/max flow anchors, second set does.
 ```{r}
 #| label: plotSubSample_100
 
-dummy <- 2
+dummy <- 1
 plotSubSample(dWB0, 100, base_size_in = 10)
 
 ```
@@ -648,7 +559,7 @@ plotSubSample(dWB0, 100, base_size_in = 10)
 ```{r}
 #| label: plotSubSample_10
 
-dummy <- 2
+dummy <- 1
 plotSubSample(dWB0, 10, base_size_in = 8)
 
 ```
@@ -657,7 +568,7 @@ plotSubSample(dWB0, 10, base_size_in = 8)
 ```{r}
 #| label: plotSubSample_7
 
-dummy <- 2
+dummy <- 1
 plotSubSample(dWB0, 7)
 
 ```
@@ -667,7 +578,7 @@ plotSubSample(dWB0, 7)
 ```{r}
 #| label: plotSubSample_4
 
-dummy <- 2
+dummy <- 1
 plotSubSample(dWB0, 4)
 
 ```
@@ -676,7 +587,7 @@ plotSubSample(dWB0, 4)
 ```{r}  
 #| label: plotSubSample_3
 
-dummy <- 2
+dummy <- 1
 plotSubSample(dWB0, 3)
 
 ```
@@ -693,7 +604,7 @@ First set of graphs does not include min/max flow anchors, second set does.
 ```{r}
 #| label: plotSubSample_100_dAB
 
-dummy <- 2
+dummy <- 1
 plotSubSample(dAB, 100, base_size_in = 10)
 
 ```
@@ -702,7 +613,7 @@ plotSubSample(dAB, 100, base_size_in = 10)
 ```{r}
 #| label: plotSubSample_10_dAB
 
-dummy <- 2
+dummy <- 1
 plotSubSample(dAB, 10, base_size_in = 8)
 
 ```
@@ -711,7 +622,7 @@ plotSubSample(dAB, 10, base_size_in = 8)
 ```{r}
 #| label: plotSubSample_7_dAB
 
-dummy <- 2
+dummy <- 1
 plotSubSample(dAB, 7)
 
 ```
@@ -721,7 +632,7 @@ plotSubSample(dAB, 7)
 ```{r}
 #| label: plotSubSample_4_dAB
 
-dummy <- 2
+dummy <- 1
 plotSubSample(dAB, 4)
 
 ```
@@ -730,7 +641,7 @@ plotSubSample(dAB, 4)
 ```{r}  
 #| label: plotSubSample_3_dAB
 
-dummy <- 2
+dummy <- 1
 plotSubSample(dAB, 3)
 
 ```
