--- a/realData.qmd
+++ b/realData.qmd
@@ -616,7 +616,7 @@ First set of graphs does not include min/max flow anchors, second set does.
 #| label: plotSubSample_100_dAB
 
 dummy <- 2
-plotSubSample(dAB, 100, base_size_in = 10)
+plotSubSample(dAB, 100)
 
 ```
 
@@ -625,7 +625,7 @@ plotSubSample(dAB, 100, base_size_in = 10)
 #| label: plotSubSample_10_dAB
 
 dummy <- 2
-plotSubSample(dAB, 10, base_size_in = 8)
+plotSubSample(dAB, 10)
 
 ```
 
@@ -658,6 +658,115 @@ plotSubSample(dAB, 3)
 ```
 
 
+### Patroon Creek
+```{r}
+#| label: PC_data
+
+dPC <- d |> filter(station_name == "01359135_Patroon Creek") 
+```
+
+#### 100 samples  
+First set of graphs does not include min/max flow anchors, second set does.
+```{r}
+#| label: plotSubSample_100_dPC
+
+dummy <- 2
+plotSubSample(dPC, 100)
+
+```
+
+#### 10 subsamples
+```{r}
+#| label: plotSubSample_10_dPC
+
+dummy <- 2
+plotSubSample(dPC, 10)
+
+```
+
+#### 7 subsamples
+```{r}
+#| label: plotSubSample_7_dPC
+
+dummy <- 2
+plotSubSample(dPC, 7)
+
+```
+
+
+#### 4 subsamples
+```{r}
+#| label: plotSubSample_4_dPC
+
+dummy <- 2
+plotSubSample(dPC, 4)
+
+```
+
+#### 3 subsample
+```{r}  
+#| label: plotSubSample_3_dPC
+
+dummy <- 2
+plotSubSample(dPC, 3)
+
+```
+
+
+
+### Green River
+```{r}
+#| label: GR_data
+
+dGR <- d |> filter(station_name == "Green River_01170100") 
+```
+
+#### 100 samples  
+First set of graphs does not include min/max flow anchors, second set does.
+```{r}
+#| label: plotSubSample_100_dGR
+
+dummy <- 2
+plotSubSample(dGR, 100)
+
+```
+
+#### 10 subsamples
+```{r}
+#| label: plotSubSample_10_dGR
+
+dummy <- 2
+plotSubSample(dGR, 10)
+
+```
+
+#### 7 subsamples
+```{r}
+#| label: plotSubSample_7_dGR
+
+dummy <- 2
+plotSubSample(dGR, 7)
+
+```
+
+
+#### 4 subsamples
+```{r}
+#| label: plotSubSample_4_dGR
+
+dummy <- 2
+plotSubSample(dGR, 4)
+
+```
+
+#### 3 subsample
+```{r}  
+#| label: plotSubSample_3_dGR
+
+dummy <- 2
+plotSubSample(dGR, 3)
+
+```
 
 :::
 
