--- a/realData.qmd
+++ b/realData.qmd
@@ -768,6 +768,63 @@ plotSubSample(dGR, 3)
 
 ```
 
+
+
+### Avery Brook side
+```{r}
+#| label: ABs_data
+
+dABs <- d |> filter(station_name == "Avery Brook_Side_01171000") 
+```
+
+#### 100 samples  
+First set of graphs does not include min/max flow anchors, second set does.
+```{r}
+#| label: plotSubSample_100_dABs
+
+dummy <- 2
+plotSubSample(dABs, 100)
+
+```
+
+#### 10 subsamples
+```{r}
+#| label: plotSubSample_10_dABs
+
+dummy <- 2
+plotSubSample(dABs, 10)
+
+```
+
+#### 7 subsamples
+```{r}
+#| label: plotSubSample_7_dABs
+
+dummy <- 2
+plotSubSample(dABs, 7)
+
+```
+
+
+#### 4 subsamples
+```{r}
+#| label: plotSubSample_4_dABs
+
+dummy <- 2
+plotSubSample(dABs, 4)
+
+```
+
+#### 3 subsample
+```{r}  
+#| label: plotSubSample_3_dABs
+
+dummy <- 2
+plotSubSample(dABs, 3)
+
+```
+
+
 :::
 
 
